fixing up searchbar location and navbar + category alignment

--- a/app/assets/stylesheets/components/_card_category.scss
+++ b/app/assets/stylesheets/components/_card_category.scss
@@ -22,6 +22,10 @@ gap: 16px;
   border-radius: 5px;
   background-size: cover;
   background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 
